src/tests/snapshots/crates_io__tests__github_secret_scanning__github_secret_alert_for_revoked_token.snap
---
source: src/tests/github_secret_scanning.rs
expression: response.json()
snapshot_kind: text
---
[
  {
    "label": "true_positive",
    "token_raw": "some_token",
    "token_type": "some_type"
  }
]
