src/tests/snapshots/crates_io__tests__github_secret_scanning__github_secret_alert_revokes_token-2.snap
---
source: src/tests/github_secret_scanning.rs
expression: app.emails_snapshot()
snapshot_kind: text
---
To: foo@example.com
From: crates.io <noreply@crates.io>
Subject: crates.io: Your API token "bar" has been revoked
Content-Type: text/plain; charset=utf-8
Content-Transfer-Encoding: quoted-printable

GitHub has notified us that your crates.io API token bar has been exposed p=
ublicly. We have revoked this token as a precaution.

Please review your account at https://crates.io to confirm that no unexpect=
ed changes have been made to your settings or crates.

Source type: some_source

URL where the token was found: some_url
