src/tests/snapshots/crates_io__tests__github_secret_scanning__github_secret_alert_revokes_trustpub_token-2.snap
---
source: src/tests/github_secret_scanning.rs
expression: response.json()
---
[
  {
    "label": "true_positive",
    "token_raw": "[token]",
    "token_type": "some_type"
  }
]
